upgraded to rails 2.1, got background stoker monitoring sort of working with spawn plugin, started playing with graphing libraries

--- a/web/app/views/blowers/index.html.erb
+++ b/web/app/views/blowers/index.html.erb
@@ -1,9 +1,10 @@
-<h1>Listing blowers</h1>
+<h2>Listing blowers</h2>
 
 <table>
   <tr>
     <th>Serial number</th>
     <th>Name</th>
+    <th>Sensor</th>
     <th>Stoker</th>
   </tr>
 
@@ -11,6 +12,7 @@
   <tr>
     <td><%=h blower.serial_number %></td>
     <td><%=h blower.name %></td>
+    <td><%= link_to blower.sensor.name, blower.sensor if blower.sensor %></td>
     <td><%= link_to blower.stoker.name, blower.stoker %></td>
     <td><%= link_to 'Show', blower %></td>
     <td><%= link_to 'Edit', edit_blower_path(blower) %></td>
