--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -11,6 +11,8 @@
 </head>
 <body>
 
+<h1>Stoker Web</h1>
+
 <p>
   <%= link_to_unless_current "Stokers", stokers_path %>
   <%= link_to_unless_current "Blowers", blowers_path %>
