--- a/web/app/views/events/show.html.erb
+++ b/web/app/views/events/show.html.erb
@@ -1,11 +1,8 @@
-<p>
-  <b>Stoker:</b>
-  <%=h @event.stoker_id %>
-</p>
+<h2><%=h @event.sensor.name %> Event</h2>
 
 <p>
-  <b>Sensor:</b>
-  <%=h @event.sensor_id %>
+  <b>Stoker:</b>
+  <%= link_to @event.stoker.name, @event.stoker %>
 </p>
 
 <p>
@@ -13,6 +10,10 @@
   <%=h @event.temp %>
 </p>
 
+<p>
+  <b>Time:</b>
+  <%= format_time @event.created_at %>
+</p>
 
 <%= link_to 'Edit', edit_event_path(@event) %> |
 <%= link_to 'Back', events_path %>
