--- a/web/app/views/sensors/index.html.erb
+++ b/web/app/views/sensors/index.html.erb
@@ -1,9 +1,10 @@
-<h1>Listing sensors</h1>
+<h2>Listing sensors</h2>
 
 <table>
   <tr>
     <th>Serial number</th>
     <th>Name</th>
+    <th>Temp</th>
     <th>Target</th>
     <th>Alarm</th>
     <th>Low</th>
@@ -16,11 +17,12 @@
   <tr>
     <td><%=h sensor.serial_number %></td>
     <td><%=h sensor.name %></td>
+    <td><%=h sensor.temp %></td>
     <td><%=h sensor.target %></td>
     <td><%=h sensor.alarm %></td>
     <td><%=h sensor.low %></td>
     <td><%=h sensor.high %></td>
-    <td><%=h sensor.blower_id %></td>
+    <td><%= link_to sensor.blower.name, sensor.blower if sensor.blower %></td>
     <td><%= link_to sensor.stoker.name, sensor.stoker %></td>
     <td><%= link_to 'Show', sensor %></td>
     <td><%= link_to 'Edit', edit_sensor_path(sensor) %></td>
