found a good javascript based graph system and got updating working

--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -8,6 +8,8 @@
   <%= stylesheet_link_tag 'scaffold' %>
   <%= stylesheet_link_tag 'application' %>
   <%= javascript_include_tag :defaults %>
+  <!--[if IE]><%= javascript_include_tag 'excanvas' %><![endif]-->
+  <%= javascript_include_tag 'flotr' %>
 </head>
 <body>
 
