misc work on web interface

--- a/web/app/views/blowers/index.html.erb
+++ b/web/app/views/blowers/index.html.erb
@@ -13,7 +13,7 @@
     <td><%=h blower.serial_number %></td>
     <td><%=h blower.name %></td>
     <td><%= link_to blower.sensor.name, blower.sensor if blower.sensor %></td>
-    <td><%= link_to blower.stoker.name, blower.stoker %></td>
+    <td><%= link_to blower.stoker.name, blower.stoker if blower.stoker %></td>
     <td><%= link_to 'Show', blower %></td>
     <td><%= link_to 'Edit', edit_blower_path(blower) %></td>
     <td><%= link_to 'Destroy', blower, :confirm => 'Are you sure?', :method => :delete %></td>
