--- a/web/app/views/cooks/edit.html.erb
+++ b/web/app/views/cooks/edit.html.erb
@@ -1,42 +1,11 @@
 <h2>Editing cook</h2>
 
-<%= error_messages_for :cook %>
-
 <% form_for(@cook) do |f| %>
-  <p>
-    <b>Name</b><br />
-    <%= f.text_field :name %>
-  </p>
-
-  <p>
-    <b>Stoker</b><br />
-    <%= f.text_field :stoker_id %>
-  </p>
-
-  <p>
-    <b>Name</b><br />
-    <%= f.text_field :name %>
-  </p>
-
-  <p>
-    <b>Description</b><br />
-    <%= f.text_area :description %>
-  </p>
-
-  <p>
-    <b>Start time</b><br />
-    <%= f.datetime_select :start_time %>
-  </p>
-
-  <p>
-    <b>End time</b><br />
-    <%= f.datetime_select :end_time %>
-  </p>
-
+  <%= render :partial => "form", :locals => {:f => f} %>
+  
   <p>
     <%= f.submit "Update" %>
+    <%= link_to 'Cancel', cooks_path %>
   </p>
 <% end %>
 
-<%= link_to 'Show', @cook %> |
-<%= link_to 'Back', cooks_path %>
