--- a/web/app/views/cooks/show.html.erb
+++ b/web/app/views/cooks/show.html.erb
@@ -1,30 +1,21 @@
 <h2><%=h @cook.name %></h2>
 
+<% if @recent_food_events.size > 0 -%>
+  <h3>Food</h3>
+  <%= graph(@recent_food_events, "food") %>
+<% end -%>
+
+<% if @recent_fire_events.size > 0 -%>
+  <h3>Fire</h3>
+  <%= graph(@recent_fire_events, "fire") %>
+<% end -%>
+
 <p>
-  <b>Stoker:</b>
-  <%=h @cook.stoker_id %>
+  On <%= link_to @cook.stoker.name, @cook.stoker %> started at <%= format_datetime(@cook.start_time) %>
 </p>
 
 <p>
-  <b>Name:</b>
-  <%=h @cook.name %>
+  <%= simple_format(@cook.description) %>
 </p>
 
-<p>
-  <b>Description:</b>
-  <%=h @cook.description %>
-</p>
-
-<p>
-  <b>Start time:</b>
-  <%=h @cook.start_time %>
-</p>
-
-<p>
-  <b>End time:</b>
-  <%=h @cook.end_time %>
-</p>
-
-
-<%= link_to 'Edit', edit_cook_path(@cook) %> |
-<%= link_to 'Back', cooks_path %>
+<%= link_to 'Edit', edit_cook_path(@cook) %>
