--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -9,7 +9,9 @@
   <%= stylesheet_link_tag 'application' %>
   <%= javascript_include_tag :defaults %>
   <!--[if IE]><%= javascript_include_tag 'excanvas' %><![endif]-->
-  <%= javascript_include_tag 'flotr' %>
+  <%= javascript_include_tag 'flotr.debug-0.1.0alpha' %>
+  <%= javascript_include_tag 'canvas2image' %>
+  <%= javascript_include_tag 'base64' %>
 </head>
 <body>
 
