--- a/web/app/views/stokers/edit.html.erb
+++ b/web/app/views/stokers/edit.html.erb
@@ -1,27 +1,9 @@
-<h1>Editing stoker</h1>
-
-<%= error_messages_for :stoker %>
+<h2>Editing stoker</h2>
 
 <% form_for(@stoker) do |f| %>
-  <p>
-    <b>Host</b><br />
-    <%= f.text_field :host %>
-  </p>
+  <%= render :partial => "form", :locals => {:f => f} %>
 
   <p>
-    <b>Port</b><br />
-    <%= f.text_field :port %>
-  </p>
-
-  <p>
-    <b>Name</b><br />
-    <%= f.text_field :name %>
-  </p>
-
-  <p>
-    <%= f.submit "Update" %>
+    <%= f.submit "Update" %> | <%= link_to "Cancel", stokers_path %>
   </p>
 <% end %>
-
-<%= link_to 'Show', @stoker %> |
-<%= link_to 'Back', stokers_path %>
