--- a/web/app/views/stokers/new.html.erb
+++ b/web/app/views/stokers/new.html.erb
@@ -1,26 +1,11 @@
-<h1>New stoker</h1>
-
-<%= error_messages_for :stoker %>
+<h2>New stoker</h2>
 
 <% form_for(@stoker) do |f| %>
-  <p>
-    <b>Host</b><br />
-    <%= f.text_field :host %>
-  </p>
-
-  <p>
-    <b>Port</b><br />
-    <%= f.text_field :port %>
-  </p>
-
-  <p>
-    <b>Name</b><br />
-    <%= f.text_field :name %>
-  </p>
+  <%= render :partial => "form", :locals => {:f => f} %>
 
   <p>
     <%= f.submit "Create" %>
+    <%= link_to 'Cancel', stokers_path %>
   </p>
 <% end %>
 
-<%= link_to 'Back', stokers_path %>
