--- a/web/app/views/shared/_graph.html.erb
+++ b/web/app/views/shared/_graph.html.erb
@@ -1,9 +1,11 @@
+<h3><%= options[:type] %></h3>
+
 <%= javascript_tag ("
   document.observe('dom:loaded', function() {
     #{options[:data_set_js]}
 
     var f = Flotr.draw(
-      $('#{options[:container_name]}'),
+      $('#{options[:container_name]}_#{options[:type]}_graph'),
       [#{options[:data_set_names].join(", ")}],
       { 
         yaxis:  { autoscaleMargin: 3 },
@@ -17,5 +19,5 @@
   });			
 ") %>
 
-<div id="<%= options[:container_name] %>" style="width:600px;height:300px;"></div>
+<div id="<%= options[:container_name] %>_<%= options[:type] %>_graph" style="width:600px;height:300px;"></div>
 <!-- <%= button_to_function "Save Image", "saveImage('#{options[:container_name]}');" %><br/> -->
