--- a/web/app/views/cooks/edit.html.erb
+++ b/web/app/views/cooks/edit.html.erb
@@ -1,4 +1,4 @@
-<h2>Editing cook</h2>
+<h2>Editing Cook</h2>
 
 <% form_for(@cook) do |f| %>
   <%= render :partial => "form", :locals => {:f => f} %>
