--- a/web/app/views/shared/_graph.html.erb
+++ b/web/app/views/shared/_graph.html.erb
@@ -19,5 +19,5 @@
   });			
 ") %>
 
-<div id="<%= options[:container_name] %>_<%= options[:type] %>_graph" style="width:600px;height:300px;"></div>
+<div id="<%= options[:container_name] %>_<%= options[:type] %>_graph" style="width:600px;height:300px;margin-left:auto;margin-right:auto;"></div>
 <!-- <%= button_to_function "Save Image", "saveImage('#{options[:container_name]}');" %><br/> -->
