--- a/web/app/views/sensors/show.html.erb
+++ b/web/app/views/sensors/show.html.erb
@@ -41,4 +41,4 @@
 </p>
 
 <%= link_to 'Edit', edit_sensor_path(@sensor) %> |
-<%= link_to 'Back', sensors_path %>
+<%= link_to 'Destroy', @sensor, :confirm => 'Are you sure?', :method => :delete %>
