--- a/web/app/views/stokers/new.html.erb
+++ b/web/app/views/stokers/new.html.erb
@@ -1,4 +1,4 @@
-<h2>New stoker</h2>
+<h2>New Stoker</h2>
 
 <% form_for(@stoker) do |f| %>
   <%= render :partial => "form", :locals => {:f => f} %>
