--- a/web/public/stylesheets/application.css
+++ b/web/public/stylesheets/application.css
@@ -1,7 +1,11 @@
+body {
+  background-color: #c0c0c0;
+}
+
 .alert {
 	padding: 10px;
 	font-weight: bold;
-	margin-top: 5px;
+	margin-top: 0px;
 	margin-bottom: 10px;
   /*
   position: fixed;
@@ -31,4 +35,38 @@
 
 .flotr-legend{
 	border: 2px solid #B6D9FF;
+}
+
+#wrapper {
+  width: 640px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #FFF;
+  border: 3px solid #000;
+  padding: 0px;
+}
+
+#header {
+  margin: 0px;
+  padding: 10px;
+  background-color: #000;
+  color: #fff;
+}
+
+#menu {
+  margin: 0px;
+  padding: 10px;
+  background-color: #ccc;
+  font-size: 12pt;
+}
+
+#menu a {
+  margin-right: 20px;
+}
+
+#content {
+  padding-top: 0px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 10px;
 }
