made the date range defaults better for cooks, added an about page

--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -22,6 +22,7 @@
     </div>
 
     <div id="menu">
+      <%= link_to "About", about_page_path, :class => "about" %>
       <%= link_to "Stokers", stokers_path %>
       <%= link_to "Blowers", blowers_path %>
       <%= link_to "Sensors", sensors_path %>
