--- a/web/app/views/cooks/show.html.erb
+++ b/web/app/views/cooks/show.html.erb
@@ -1,5 +1,14 @@
 <h2><%=h @cook.name %></h2>
 
+<p>
+  On <%= link_to @cook.stoker.name, @cook.stoker %> started at <%= format_datetime(@cook.start_time) %>
+  <%= "- #{format_datetime(@cook.end_time)}" if @cook.end_time.to_s != "" %>
+</p>
+
+<p>
+  <%= link_to 'Edit', edit_cook_path(@cook) %> | <%= @cook.running? ? "Running" : "Not Running" %>
+</p>
+
 <% form_tag cook_path(@cook), :method => :get do %>
   <%= radio_button_tag :range, "last", params[:range] == "last", :onclick => "$('range_select').hide();" %> Last <%= text_field_tag :hours, params[:hours], :size => "2", :maxlength => "2" %> Hours
   <%= radio_button_tag :range, "all", params[:range] == "all", :onclick => "$('range_select').hide();" %> All
@@ -16,11 +25,5 @@
 <%= graph(@events, "cook") %>
 
 <p>
-  On <%= link_to @cook.stoker.name, @cook.stoker %> started at <%= format_datetime(@cook.start_time) %>
-</p>
-
-<p>
   <%= simple_format(@cook.description) %>
 </p>
-
-<%= link_to 'Edit', edit_cook_path(@cook) %>
