cleaned up the other pages, added drop downs for lookup fields on various forms, etc

--- a/web/app/views/blowers/_form.html.erb
+++ b/web/app/views/blowers/_form.html.erb
@@ -12,5 +12,5 @@
 
 <p>
   <b>Stoker</b><br />
-  <%= f.text_field :stoker_id %>
+  <%= f.collection_select :stoker_id, Stoker.find(:all), :id, :name %>
 </p>
