--- a/web/app/views/events/new.html.erb
+++ b/web/app/views/events/new.html.erb
@@ -1,26 +1,10 @@
-<h2>New event</h2>
-
-<%= error_messages_for :event %>
+<h2>New Event</h2>
 
 <% form_for(@event) do |f| %>
-  <p>
-    <b>Stoker</b><br />
-    <%= f.text_field :stoker_id %>
-  </p>
-
-  <p>
-    <b>Sensor</b><br />
-    <%= f.text_field :sensor_id %>
-  </p>
-
-  <p>
-    <b>Temp</b><br />
-    <%= f.text_field :temp %>
-  </p>
-
+  <%= render :partial => "form", :locals => {:f => f} %>
+  
   <p>
     <%= f.submit "Create" %>
+    <%= link_to "Cancel", events_path %>
   </p>
 <% end %>
-
-<%= link_to 'Back', events_path %>
