--- a/web/app/views/shared/_graphs.html.erb
+++ b/web/app/views/shared/_graphs.html.erb
@@ -1,3 +1,4 @@
 <% options.each do |opts| -%>
   <%= render :partial => "/shared/graph", :locals => {:options => opts} %>
+  <%#= render :partial => "/shared/graph", :locals => {:options => opts[:trend]} %>
 <% end -%>
