--- a/web/app/views/cooks/show.html.erb
+++ b/web/app/views/cooks/show.html.erb
@@ -10,8 +10,9 @@
 </p>
 
 <p>
-  On <%= link_to @cook.stoker.name, @cook.stoker %> started at <%= format_datetime(@cook.start_time) %>
-  <%= "- #{format_datetime(@cook.end_time)}" if @cook.end_time.to_s != "" %>
+  On <%= link_to @cook.stoker.name, @cook.stoker %> <%= format_datetime(@cook.start_time) %>
+  <%= "- #{@cook.start_time.to_date == @cook.end_time.to_date ? format_time(@cook.end_time) : format_datetime(@cook.end_time)}" if @cook.end_time.to_s != "" %>
+  <%= distance_of_time_in_words(@cook.start_time, @cook.end_time || Time.now) %>
 </p>
 
 <% form_tag cook_path(@cook), :method => :get do %>
